@@ -1,3 +1,8 @@
+2009-09-05  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/41258
+	* gfortran.dg/typebound_proc_12.f90 : New test.
+
 2009-09-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/proc_ptr_comp_18.f90: Removed.
